--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/column-spanning-grid-sample.html">Column Spanning Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/row-drag-and-drop-without-grid-sample.html">Row Drag and Drop (Without) Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/row-drag-and-drop-within-grid-sample.html">Row Drag and Drop (Within) Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/adaptive-grid-sample.html">Adaptive Grid Sample</a></li>
 </ul>
