--- a/adaptive-grid-sample.html
+++ b/adaptive-grid-sample.html
@@ -48,7 +48,9 @@
     </div>    
 
 <script >
-    ej.grids.Grid.Inject(ej.grids.Page, ej.grids.Filter, ej.grids.Sort, ej.grids.Edit, ej.grids.Aggregate, ej.grids.Toolbar);
+    ej.grids.Grid.Inject(ej.grids.Page, ej.grids.Group, ej.grids.LazyLoadGroup,ej.grids.Toolbar, ej.grids.ColumnChooser,
+                         ej.grids.Sort, ej.grids.Filter, ej.grids.ColumnMenu, ej.grids.RowDD, ej.grids.DetailRow, ej.grids.Search,
+                         ej.grids.Toolbar, ej.grids.Edit, ej.grids.VirtualScroll, ej.grids.InfiniteScroll);
     
     var grid = new ej.grids.Grid({
     dataSource: data.slice(0, 20),
