--- a/adaptive-grid-sample.html
+++ b/adaptive-grid-sample.html
@@ -41,9 +41,11 @@
     </style>
 </head>
 <body>
-       <div class="e-mobile-layout">
-        <div class="e-mobile-content">
-            <div id="adaptivebrowser"></div>
+       <div id='container' class="e-adaptive-demo e-bigger">
+        <div class="e-mobile-layout">
+            <div class="e-mobile-content">
+                <div id="Grid"></div>
+            </div>
         </div>
     </div>    
 
@@ -74,6 +76,6 @@
             { field: "ShipCity", headerText: "Ship City", width: 250 },
     ],
 });
-grid.appendTo('#adaptivebrowser');
+grid.appendTo('#Grid');
 </script>
 </body></html>
