--- a/adaptive-grid-sample.html
+++ b/adaptive-grid-sample.html
@@ -65,7 +65,7 @@
     filterSettings: { type: 'Excel' },
     toolbar: ['Add', 'Edit', 'Delete', 'Update', 'Cancel', 'Search'],
     editSettings: { allowAdding: true, allowEditing: true, allowDeleting: true, mode: 'Dialog' },
-    height: '100%',
+    height: 400,
     load: function() {
         grid.adaptiveDlgTarget = document.getElementsByClassName('e-mobile-content')[0];
     },
