--- a/grid-overall-sample-remote.html
+++ b/grid-overall-sample-remote.html
@@ -31,6 +31,12 @@
           margin-right: 16px;
           width: 20px;
         }
+        .e-grid .e-mask.e-mask-checkbox-filter-intent {
+          width: 13px;
+        }
+        .e-grid .e-mask.e-mask-checkbox-filter-span-intent {
+          margin-left: 8px;
+        }
         .e-grid .e-mask.e-mask-drag-intent {
           margin-left: 12px;
           width: 12px;
