--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h1>Test Samples</h1>
 <ul>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-remote.html">Sort, Filter, Group, Paging, Column Reorder, Alt Row Color, Row Height, Column Menu Using Remote Data Grid Sample</a></li>
-  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/checkbox-filter-sample-remote.html">Check Box Filter Using Remote Data Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/checkbox-column-sample-remote.html">Check Box Column Using Remote Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-local.html">Edit, Aggregate Using Local Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-frozen-column-reorder-sample.html">Frozen, Column Reorder Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-infinite-scroll-sample-remote.html">Infinite Scroll Using Remote Data Grid Sample</a></li>
