Update and rename checkbox-filter-sample-remote.html to checkbox-column-sample-remote.html

--- a/checkbox-column-sample-remote.html
+++ b/checkbox-column-sample-remote.html
@@ -69,6 +69,7 @@
         allowReordering: true,
         rowHeight: 60,
         columns: [
+             { type: 'checkbox', width: 120 },
                 { field: 'OrderID', headerText: 'Order ID', width: 120, type: 'number' },
                 { field: 'CustomerID', textAlign: 'Right', width: 140, headerText: 'Customer ID', type: 'string' },
                 { field: 'Freight', headerText: 'Freight', textAlign: 'Right', width: 120, format: 'C' },
