--- a/grid-overall-sample-remote.html
+++ b/grid-overall-sample-remote.html
@@ -47,6 +47,13 @@
     </style>
 </head>
 <body>
+        <label for="loadingIndicator">Choose a Loading Indicator:</label>
+
+        <select name="loadingIndicator" id="loadingIndicator" onchange="loadingIndicatorChange()">
+          <option value="Shimmer">Shimmer</option>
+          <option value="Spinner">Spinner</option>
+        </select>
+    
         <div id="Grid"></div>        
 
 <script >
@@ -77,5 +84,14 @@
         ]
 });
 grid.appendTo('#Grid');
+    
+    function loadingIndicatorChange() {
+    var grid = document.getElementsByClassName('e-grid')[0].ej2_instances[0];
+    if (document.getElementById("loadingIndicator").value === 'Spinner') {
+       grid.loadingIndicator.indicatorType = 'Spinner';
+    } else if (document.getElementById("loadingIndicator").value === 'Shimmer') {
+        grid.loadingIndicator.indicatorType = 'Shimmer';
+    }
+}
 </script>
 </body></html>
