--- a/index.html
+++ b/index.html
@@ -16,4 +16,5 @@
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/row-drag-and-drop-within-grid-sample.html">Row Drag and Drop (Within) Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/adaptive-grid-sample.html">Adaptive Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/adaptive-remote-grid-sample.html">Adaptive Grid Sample Using Remote Data</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-virtual-scroll-sample-remote.html">Virtualization Grid Sample Using Remote Data</a></li>
 </ul>
