--- a/grid-virtual-scroll-sample-remote.html
+++ b/grid-virtual-scroll-sample-remote.html
@@ -47,13 +47,7 @@
     </style>
 </head>
 <body>
-        <label for="loadingIndicator">Choose a Loading Indicator:</label>
 
-        <select name="loadingIndicator" id="loadingIndicator" onchange="loadingIndicatorChange()">
-          <option value="Shimmer">Shimmer</option>
-          <option value="Spinner">Spinner</option>
-        </select>
-    
         <div id="Grid"></div>        
 
 <script >
@@ -68,14 +62,12 @@
         dataSource: data,
         height: 400,
         loadingIndicator: { indicatorType: 'Shimmer' },
+        enableVirtualMaskRow : true,
+        enableVirtualization: true,
+        pageSettings: { pageSize: 50 },
         allowFiltering: true,
         filterSettings: { type:'Excel' },
         allowSorting: true,
-        allowGrouping: true,
-        allowPaging: true,
-        allowReordering: true,
-        rowHeight: 60,
-        showColumnMenu: true,
         columns: [
                 { field: 'OrderID', headerText: 'Order ID', width: 120, type: 'number' },
                 { field: 'CustomerID', textAlign: 'Right', width: 140, headerText: 'Customer ID', type: 'string' },
@@ -84,14 +76,6 @@
         ]
 });
 grid.appendTo('#Grid');
-    
-    function loadingIndicatorChange() {
-    var grid = document.getElementsByClassName('e-grid')[0].ej2_instances[0];
-    if (document.getElementById("loadingIndicator").value === 'Spinner') {
-       grid.loadingIndicator.indicatorType = 'Spinner';
-    } else if (document.getElementById("loadingIndicator").value === 'Shimmer') {
-        grid.loadingIndicator.indicatorType = 'Shimmer';
-    }
-}
+
 </script>
 </body></html>
