--- a/adaptive-remote-grid-sample.html
+++ b/adaptive-remote-grid-sample.html
@@ -14,8 +14,6 @@
 
     <style>
       .e-grid .e-mask {
-          background-color: rgba(0, 0, 0, 0.1);
-          display: inline-block;
           height: 10px;
           width: 80%;
         }
@@ -31,9 +29,41 @@
           margin-right: 16px;
           width: 20px;
         }
+        .e-grid .e-mask.e-mask-checkbox-filter-intent {
+          width: 13px;
+        }
+        .e-grid .e-mask.e-mask-checkbox-filter-span-intent {
+          margin-left: 8px;
+        }
         .e-grid .e-mask.e-mask-drag-intent {
           margin-left: 12px;
           width: 12px;
+        }
+        .e-grid .e-skeleton {
+          display: inline-block;
+          position: relative;
+          overflow: hidden;
+          border: none;
+        }
+        .e-grid .e-skeleton.e-skeleton-text {
+          background-color: #f3f2f1;
+          border-radius: 0;
+        }
+        .e-grid .e-skeleton.e-shimmer-wave::after {
+          content: "";
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          right: 0;
+          width: calc(200% + 200px);
+          animation: e-shimmer-wave 1.5s infinite;
+          animation-timing-function: ease-in-out;
+          background-image: linear-gradient(90deg, transparent calc(50% - 100px), rgba(255, 255, 255, 0.5) 50%, transparent calc(50% + 100px));
+        }
+        @keyframes e-shimmer-wave {
+          to {
+            transform: translateX(calc(50% + 100px));
+          }
         }
       .e-grid .e-altrow {
         background-color: #fafafa;
