--- a/stacked-header-grid-sample.html
+++ b/stacked-header-grid-sample.html
@@ -86,6 +86,7 @@
         filterSettings: { type:'Excel' },
         allowSorting: true,
         allowGrouping: true,
+        groupSettings: { allowReordering: true },
         allowPaging: true,
         pageSettings: { pageCount: 5 },
         allowReordering: true,
