--- a/grid-overall-sample-remote.html
+++ b/grid-overall-sample-remote.html
@@ -96,6 +96,7 @@
         filterSettings: { type:'Excel' },
         allowSorting: true,
         allowGrouping: true,
+        groupSettings: { allowReordering: true },
         allowPaging: true,
         allowReordering: true,
         rowHeight: 60,
