--- a/grid-virtual-scroll-sample-remote.html
+++ b/grid-virtual-scroll-sample-remote.html
@@ -89,6 +89,8 @@
         allowFiltering: true,
         filterSettings: { type:'Excel' },
         allowSorting: true,
+        allowGrouping: true,
+        groupSettings: { allowReordering: true },
         columns: [
                 { field: 'OrderID', headerText: 'Order ID', width: 120, type: 'number' },
                 { field: 'CustomerID', textAlign: 'Right', width: 140, headerText: 'Customer ID', type: 'string' },
